@@ -1,0 +1,11 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Advanced reporting</h1>
+<p>
+You can use only a macro in the first page:  (_DATETIME_) this token will be replaced by the current date and time in the moment of generating the PDF.
+<br><br>
+If you have problems loading a image file, try using a PNG format instead JPG or other formats.
+</p>
