@@ -1,0 +1,13 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Opciones avanzadas</h1>
+<p>
+Puede usar una macro en la portada:<br><br>
+
+<b>(_DATETIME_)</b>  este token será reemplazado por la fecha y hora actual en el momento de generar el PDF.
+<br><br>
+Si tiene problemas visualizando una imagen, prueba a usar el formato PNG en vez de usar otros formatos.
+</p>
